# Agam

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: deploy-extension.yml  installer.yml  release.yml
docs/: 05_data_types.md  09_functions.md  10_builtins.md  12_dictionaries.md  13_keywords.md  15_structs.md  17_pattern_matching.md  18_error_handling.md  19_modules.md
docs-site/: index.html
docs-site/public/docs/: 16_enums.md  20_file_io.md  README.md
docs-site/src/config/: docs.ts
docs-site/src/pages/: DocPage.tsx  Home.tsx
examples/: import_test.agam  math_module.agam  namespace_import_test.agam  selective_import_test.agam  struct_test.agam  ultimate_test.agam
scripts/: install.ps1  install.sh  installer.iss
src/: main.rs
src/interpreter/: builtin.rs  evaluator.rs
src/lexer/: scanner.rs  token.rs
src/parser/: ast.rs  parser.rs
src/types/: values.rs
