[package]
name = "agam"
version = "0.1.2"
edition = "2021"
authors = ["Aruvili Team"]
description = "அகம் - A Tamil programming language with Python-like syntax"
license = "MIT"
repository = "https://github.com/aruvili/agam"
keywords = ["tamil", "programming-language", "interpreter", "education", "agam"]
categories = ["compilers", "development-tools"]

[dependencies]
unicode-segmentation = "1.10"
rustyline = "12.0"
thiserror = "1.0"
ureq = "2.9"
tungstenite = "0.21"
lazy_static = "1.4"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true

[[bin]]
name = "agam"
path = "src/main.rs"
